[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/GameOverMenuUI/GameOverMenuUI.gd" type="Script" id=1]
[ext_resource path="res://ui/common/netherreich_theme.tres" type="Theme" id=2]

[node name="GameOverMenuUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -300.0
margin_right = 400.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 345.0
margin_top = 264.0
margin_right = 454.0
margin_bottom = 335.0

[node name="RestartLevelButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 109.0
margin_bottom = 21.0
theme = ExtResource( 2 )
text = "Restart"

[node name="ExitToMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 109.0
margin_bottom = 46.0
theme = ExtResource( 2 )
text = "Exit to menu"

[node name="ExitGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 109.0
margin_bottom = 71.0
theme = ExtResource( 2 )
text = "Exit game"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 106.0
margin_top = 58.5137
margin_right = 215.0
margin_bottom = 81.5137
rect_clip_content = false
theme = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]YOU DIED[/center]"
text = "YOU DIED"
__meta__ = {
"_edit_use_anchors_": false
}
